# agentops

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test.py
.claude/: settings.json  settings.md
.claude/agents/: code-reviewer.md
.claude/commands/: fix.md
.claude/hooks/: skill-rules.json
.claude/skills/: README.md
.codex/: config.toml  hooks.json
.codex/agents/: code-reviewer.toml  github-workflow.toml
agents/: agent_service.py  chat_service.py  forms.py  models.py  schedule_service.py  squelch_lookup.py  tasks.py  tests.py  urls.py  views.py
agents/migrations/: 0001_initial.py  0002_agentschedule.py  0003_add_agent_run.py  0004_replace_tool_flags_with_mcp_servers.py  0005_chat.py  0006_add_claude_session_id.py  0007_commandschedule_commandrun.py  0008_move_commands_to_ops.py
agents/templates/: agents.html  base.html  chat.html  dashboard.html  run_detail.html  runs.html  schedules.html
agents/templatetags/: agents_extras.py
config/: settings.py  urls.py
ops/: admin.py  calc_log.py  command_registry.py  command_service.py  forms.py  lock_monitor.py  models.py  tasks.py  tenant_lookup.py  test_calc_log_scripts.py  tests.py  urls.py  views.py
ops/calc_log_scripts/: __init__.py  dashboard_template.html  generate_dashboard.py  parsecalclogdetail.py
ops/commands/: __init__.py  backup_download_import.py  (+2 more)
tools/: __init__.py  db_config.py  mysql_server.py  server.py  squelch.py  tenant.py  tunnel.py
users/: managers.py  models.py  views.py
(+57 files in other folders)
