[project]
name = "agentops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "claude-agent-sdk>=0.2.101",
    "django>=6.0",
    "django-htmx>=1.27.0",
    "django-q-rollbar>=0.1.3",
    "django-q2>=1.10.0",
    "html2text>=2025.4.15",
    "markdown>=3.10.2",
    "mcp>=1.27.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-ai-slim[openai]>=1.107.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "typing-extensions>=4.15.0",
]

[tool.ruff]
extend-exclude = ["ops/calc_log_scripts"]
